fix layout on ios

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -99,3 +99,9 @@
 .scrollbar-thumb-rounded::-webkit-scrollbar-thumb {
   border-radius: 7px;
 }
+
+@supports (-webkit-touch-callout: none) {
+  .h-screen {
+    height: -webkit-fill-available;
+  }
+}
